<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/iv_icon"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="TextView" />

    <TextView
        android:id="@+id/tv_definition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_icon"
        tools:text="TextView" />

    <TextView
        android:id="@+id/tv_thumbs_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_thumbs_up"
        app:layout_constraintStart_toEndOf="@+id/iv_thumbs_up"
        app:layout_constraintTop_toTopOf="@+id/iv_thumbs_up"
        tools:text="TextView" />

    <TextView
        android:id="@+id/tv_thumbs_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_tv_thumbs_down"
        app:layout_constraintStart_toEndOf="@+id/iv_tv_thumbs_down"
        app:layout_constraintTop_toTopOf="@+id/iv_tv_thumbs_down"
        tools:text="TextView" />

    <ImageView
        android:id="@+id/iv_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_name"
        app:srcCompat="@drawable/ic_book"
        android:contentDescription="@string/book_icon_hint" />

    <ImageView
        android:id="@+id/iv_thumbs_up"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:contentDescription="@string/thumbs_up_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_definition"
        app:srcCompat="@drawable/ic_thumbs_up" />

    <ImageView
        android:id="@+id/iv_tv_thumbs_down"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="32dp"
        android:contentDescription="@string/thumbs_down_hint"
        app:layout_constraintBottom_toBottomOf="@+id/iv_thumbs_up"
        app:layout_constraintStart_toEndOf="@+id/tv_thumbs_up"
        app:layout_constraintTop_toTopOf="@+id/iv_thumbs_up"
        app:srcCompat="@drawable/ic_thumbs_down" />

</androidx.constraintlayout.widget.ConstraintLayout>